--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "godmode",
   "displayName": "Godmode",
   "description": "An emacs-inspired modal editing extension for VS Code with navigation, text selection, and file operations",
-  "version": "0.1.23",
+  "version": "0.1.24",
   "publisher": "filodamos",
   "author": {
     "name": "Filodamos Papanatsios",
@@ -382,7 +382,12 @@
     "pretest": "npm run compile-tests && npm run compile && npm run lint",
     "check-types": "tsc --noEmit",
     "lint": "eslint src",
-    "test": "vscode-test"
+    "test": "vscode-test",
+    "publish:patch": "./publish.sh patch",
+    "publish:minor": "./publish.sh minor",
+    "publish:major": "./publish.sh major",
+    "vsce:package": "vsce package",
+    "vsce:publish": "vsce publish"
   },
   "devDependencies": {
     "@types/vscode": "^1.60.0",
@@ -395,6 +400,7 @@
     "npm-run-all": "^4.1.5",
     "typescript": "^5.8.3",
     "@vscode/test-cli": "^0.0.11",
-    "@vscode/test-electron": "^2.5.2"
+    "@vscode/test-electron": "^2.5.2",
+    "@vscode/vsce": "^3.1.1"
   }
 }
