--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "godmode",
   "displayName": "Godmode",
   "description": "An emacs-inspired modal editing extension for VS Code with navigation, text selection, and file operations",
-  "version": "0.1.26",
+  "version": "0.1.27",
   "publisher": "filodamos",
+  "icon": "icon.png",
   "author": {
     "name": "Filodamos Papanatsios",
     "email": "filodamos@outlook.fr"
